[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/case_3/invest_1/ahata_day1.gd" type="Script" id=2]
[ext_resource path="res://sprites/background/ahata_bg.png" type="Texture" id=3]
[ext_resource path="res://scenes/character_scenes/character_egorich.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/investigation_v3.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/character_scenes/character_zheka_halal.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/character_scenes/character_temichlegs.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/character_scenes/character_zheka.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/character_scenes/character_tuvok.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="poi_1" type="Button" parent="."]
margin_left = 304.0
margin_top = -8.0
margin_right = 1034.0
margin_bottom = 78.0
text = "49"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poi_2" type="Button" parent="."]
margin_left = 612.842
margin_top = 296.704
margin_right = 804.842
margin_bottom = 445.704
text = "21"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poi_3" type="Button" parent="."]
margin_left = 210.0
margin_top = 375.0
margin_right = 385.0
margin_bottom = 469.0
text = "38"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poi_4" type="Button" parent="."]
margin_left = 114.0
margin_top = -7.0
margin_right = 273.0
margin_bottom = 372.0
text = "69"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_ground" type="AnimatedSprite" parent="."]
position = Vector2( -306.573, -29.9619 )
scale = Vector2( 0.573176, 0.573176 )
frames = SubResource( 1 )
centered = false

[node name="characters_all" type="Node2D" parent="."]
position = Vector2( -1, -115 )

[node name="character_egorich" parent="characters_all" instance=ExtResource( 4 )]
visible = false
position = Vector2( 1, 115 )

[node name="character_temich" parent="characters_all" instance=ExtResource( 7 )]
visible = false
position = Vector2( 9.52441, 190.488 )

[node name="character_zheka" parent="characters_all" instance=ExtResource( 8 )]
visible = false
position = Vector2( 1, 115 )

[node name="character_tuvok" parent="characters_all" instance=ExtResource( 9 )]
visible = false
position = Vector2( 0, 152 )

[node name="desk" parent="characters_all/character_tuvok" index="1"]
visible = false

[node name="character_halal" parent="characters_all" instance=ExtResource( 6 )]
visible = false
position = Vector2( -26.4335, 216.243 )

[node name="investigation_screen" parent="." instance=ExtResource( 5 )]
[connection signal="mouse_entered" from="poi_1" to="." method="_on_poi_1_mouse_entered"]
[connection signal="mouse_exited" from="poi_1" to="." method="_on_poi_mouse_exited"]
[connection signal="pressed" from="poi_1" to="." method="_on_poi_1_pressed"]
[connection signal="mouse_entered" from="poi_2" to="." method="_on_poi_2_mouse_entered"]
[connection signal="mouse_exited" from="poi_2" to="." method="_on_poi_mouse_exited"]
[connection signal="pressed" from="poi_2" to="." method="_on_poi_2_pressed"]
[connection signal="mouse_entered" from="poi_3" to="." method="_on_poi_3_mouse_entered"]
[connection signal="mouse_exited" from="poi_3" to="." method="_on_poi_mouse_exited"]
[connection signal="pressed" from="poi_3" to="." method="_on_poi_3_pressed"]
[connection signal="mouse_entered" from="poi_4" to="." method="_on_poi_4_mouse_entered"]
[connection signal="mouse_exited" from="poi_4" to="." method="_on_poi_mouse_exited"]
[connection signal="pressed" from="poi_4" to="." method="_on_poi_4_pressed"]

[editable path="characters_all/character_tuvok"]
